Switch to HttpClient, jdk17 native
- Manage follow redirect, auth
- Manage SSL trustall, hostname verification
- Fix Coder not rendering raw <tag> as String
- Fix random-case tamper path
- Obfuscate web/sql/upload shells
- Split interruption from execution exception
- Remove jcifs/spnego (requires Digest implementation)
- Remove introspection for timeout/custom method
- Remove sun AuthCache packages